manifests/base/commit-server/hanzocd-commit-server-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  labels:
    app.kubernetes.io/name: hanzocd-commit-server
    app.kubernetes.io/part-of: hanzocd
    app.kubernetes.io/component: commit-server
  name: hanzocd-commit-server-network-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: hanzocd-commit-server
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: hanzocd-application-controller
      ports:
        - protocol: TCP
          port: 8086
    - from:
        - namespaceSelector: { }
      ports:
        - port: 8087
